# objex-rs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs  electrical.rs
src/: error.rs  lib.rs  persist.rs
src/core/: composite.rs  mod.rs  object.rs  types.rs
src/systems/: composite.rs  degradation.rs  electrical.rs  mass.rs  mechanical.rs  mod.rs  strength.rs  thermal.rs
tests/: basic.rs  electrical.rs  mechanical.rs  multiple_objects.rs  persist.rs
